--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "library-cli": "./index.js"
   },
   "scripts": {
-    "cli-id": "node -r esm ./index.js --generate",
-    "cli-update": "node -r esm ./index.js --updateversion --pi",
+    "cli-id": "node ./index.js --generate",
+    "cli-update": "node ./index.js --updateversion --pi",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -32,7 +32,6 @@
     "dayjs-plugin-utc": "^0.1.2",
     "esm": "^3.2.25",
     "minimist": "^1.2.5",
-    "short-uuid": "^3.1.1",
-    "uuid": "^8.2.0"
+    "short-uuid": "^3.1.1"
   }
 }
