--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,15 +1,11 @@
 name: Publish CI
 
-# on:
-#     push:
-#       branches:
-#         - master
-#     watch:
-#         types: [started]
-
 on:
     workflow_dispatch:
       inputs:
+        label:
+          description: 'Label'
+          default: 'Npm Publish - Version Update'
         logLevel:
           description: 'Log level'
           required: true
@@ -17,7 +13,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     if: github.actor == github.event.repository.owner.login
@@ -28,15 +23,63 @@ jobs:
         node-version: [13.x]
 
     steps:
+    - name: Input
+      run: |
+        echo label: ${{ github.event.inputs.label }}
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      with:
+        ref: dev
+    - name: Node Dependencies
+      run: |
+        npm install --no-package-lock
+    - name: Update Package Version
+      run: |
+        cat package.json
+    - name: Initialize Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         registry-url: 'https://registry.npmjs.org'
-    # - run: npm install
-    # - run: npm run build --if-present
-    # - run: npm test
+    - name: Update Package Version
+      run: |
+        npm run cli-update -- --silent
+    - name: Git Check
+      id: git-changes
+      if: success()
+      uses: UnicornGlobal/has-changes-action@v1.0.11
+    - name: Git Check Output
+      run: |
+        echo changed? ${{ steps.git-changes.outputs.changed }}
+    - name: Git Commit Version
+      run: |
+        git config --global user.name '${{ github.repository_owner }}'
+        git config --global user.email '${{ github.repository_owner }}@users.noreply.github.com'
+        git add .
+        git commit -m '${{ github.event.inputs.label }}'
+        git push
+    - name: Requires Pull Request?
+      run: |
+        echo changed? ${{ steps.git-changes.outputs.changed }}
+    - name: Pull Request
+      id: pull-request
+      if: steps.git-changes.outputs.changed == true && success()
+      uses: repo-sync/pull-request@v2
+      with:
+        source_branch: dev
+        destination_branch: master
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Pull Request Output
+      if: steps.git-changes.outputs.changed == true && success()
+      run: |
+        echo ${{ steps.pull-request.outputs.pr_url }}
+        echo ${{ steps.pull-request.outputs.pr_number }}
+    - name: Merge pull request
+      if: steps.git-changes.outputs.changed == true && steps.pull-request.outputs.pr_number > 0 && success()
+      uses: sudo-bot/action-pull-request-merge@v1.1.1
+      with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          number: ${{ steps.pull-request.outputs.pr_number }}
     - run: npm publish --access public
+      if: steps.git-changes.outputs.changed == 1 && success()
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
