--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,6 +25,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: dev
+        fetch-depth: 0
+    - name: Package Output
     - name: Package Output
       run: |
         cat package.json
@@ -64,6 +66,18 @@ jobs:
         echo changed? ${{ steps.git-changes.outputs.changed }}
         echo npm commit? ${{ github.event.client_payload.action == 'npm' && steps.git-changes.outputs.changed == true }}
         echo !npm commit? ${{ github.event.action != 'npm' && steps.git-changes.outputs.changed == true && github.event.client_payload.label != '' }}
+    - name: Git Diff Check
+      id: git-diff-changes
+      run: |
+        git diff origin/master origin/dev --shortstat
+        diff_check=$(git diff origin/master origin/dev --shortstat)
+        echo $diff_check
+        echo ${#diff_check}
+        diff_check_length=${#diff_check}
+        echo ::set-output name=diff_check_length::$diff_check_length
+    - name: Git Diff Check Output
+      run: |
+        echo ${{ steps.git-diff-changes.outputs.diff_check_length }}- name: Git Commit NPM
     - name: Git Commit NPM
       if: github.event.client_payload.action == 'npm' && steps.git-changes.outputs.changed == true
       run: |
