--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dayjs-plugin-utc": "^0.1.2",
     "esm": "^3.2.25",
     "minimist": "^1.2.5",
+    "nanoid": "^3.1.25",
     "short-uuid": "^4.2.0"
   }
 }
