--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@thzero/library_cli",
-  "version": "0.13.21",
+  "version": "0.13.22",
   "version_major": 0,
   "version_minor": 13,
-  "version_patch": 21,
-  "version_date": "10/15/2021",
+  "version_patch": 22,
+  "version_date": "01/26/2022",
   "description": "A cli tool for the opinonated libraries.",
   "author": "thZero",
   "license": "MIT",
@@ -25,6 +25,7 @@
   "scripts": {
     "cli-id": "node ./index.js --generate",
     "cli-update": "node ./index.js --updateversion --pi",
+    "cli-update-w": "node ./index.js --updateversion --pi",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
