--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,14 @@ node_modules
 node_modules2
 /dist
 
+.npmrc
+
 # local env files
 .env.local
 .env.*.local
 
 # Log files
+debug.log*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -27,5 +30,3 @@ firebase-debug.log*
 /config/development.json
 /config/productionManual.json
 /config/serviceAccountKey.json
-
-.npmrc
