--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   },
   "scripts": {
     "cli-id": "node ./index.js --generate",
-    "cli-update": "node --experimental-specifier-resolution=node ./index.js --updateversion --pi",
-    "cli-update-w": "node --experimental-specifier-resolution=node ./index.js --updateversion --pi",
+    "cli-update": "node ./index.js --updateversion --pi",
+    "cli-update-w": "node ./index.js --updateversion --pi",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
