--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         #node-version: [8.x, 10.x, 12.x]
-        node-version: [18.x]
+        node-version: [13.x]
 
     steps:
     - name: Event Input
@@ -48,6 +48,10 @@ jobs:
         echo npm_and_upgrade? ${{ (github.event.client_payload.action == 'npm' && steps.ncu-upgrade.outputs.upgraded == true) }}
         echo action_is_version? ${{ (github.event.action == 'version') }}
         echo upgrade? ${{ ((github.event.client_payload.action == 'npm' && steps.ncu-upgrade.outputs.upgraded == true) || github.event.action == 'version') }}
+    - name: Node Dependencies for CLI
+      if: ((github.event.client_payload.action == 'npm' && steps.ncu-upgrade.outputs.upgraded == true) || github.event.action == 'version')
+      run: |
+        npm install -g @thzero/library_cli
     - name: Node Dependencies
       if: ((github.event.client_payload.action == 'npm' && steps.ncu-upgrade.outputs.upgraded == true) || github.event.action == 'version')
       run: |
@@ -55,7 +59,8 @@ jobs:
     - name: Update Package Version
       if: ((github.event.client_payload.action == 'npm' && steps.ncu-upgrade.outputs.upgraded == true) || github.event.action == 'version')
       run: |
-        npm run cli-update -- --silent
+        # npm run cli-update -- --silent
+        library-cli --updateversion --pi --silent
     - name: Git Check
       id: git-changes
       if: success()
@@ -73,7 +78,7 @@ jobs:
         echo $diff_check
         echo ${#diff_check}
         diff_check_length=${#diff_check}
-        echo ::set-output name=diff_check_length::$diff_check_length
+        echo "diff_check_length=$diff_check_length" >> $GITHUB_OUTPUT
     - name: Git Diff Check Output
       run: |
         echo ${{ steps.git-diff-changes.outputs.diff_check_length }}- name: Git Commit NPM
@@ -119,11 +124,11 @@ jobs:
       if: steps.git-changes.outputs.changed == 1 && success()
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-    - name: Repository Dispatch - Common
+    - name: Repository Dispatch - Build Base
       if: github.event.action == 'build_all'
       uses: peter-evans/repository-dispatch@v1
       with:
         token: ${{ secrets.ACCESS_TOKEN }}
-        repository: thzero/library_common
-        event-type: ${{ github.event.action }}
+        repository: thzero/library_build
+        event-type: 'build_all_base'
         client-payload: '{ "action": "${{ github.event.client_payload.action }}", "label": "${{ github.event.client_payload.label }}" }'
