--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "esm": "^3.2.25",
     "minimist": "^1.2.8",
     "nanoid": "^4.0.1",
-    "short-uuid": "^4.2.2"
+    "short-uuid": "^4.2.2",
+    "uuid": "^9.0.0"
   }
 }
