--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@thzero/library_cli",
   "type": "module",
-  "version": "0.18.19",
+  "version": "0.18.20",
   "version_major": 0,
   "version_minor": 18,
-  "version_patch": 19,
-  "version_date": "12/30/2025",
+  "version_patch": 20,
+  "version_date": "02/07/2026",
   "description": "A cli tool for the opinonated libraries.",
   "author": "thZero",
+  "author_url": "https://www.thzero.com",
+  "copyright": "2020-2026",
   "license": "MIT",
   "repository": {
     "type": "git",
